force-app/main/default/objects/mcdm_15__MarketingCloudJourney__x/mcdm_15__MarketingCloudJourney__x.object-meta.xml
<CustomObject>
    <description>External object to expose Marketing Cloud journeys.</description>
    <externalDataSource>mcdm_15__MarketingCloudDataSource</externalDataSource>
    <externalName>MarketingCloudJourney</externalName>
    <label>MC Journey</label>
    <pluralLabel>MC Journeys</pluralLabel>
</CustomObject>