force-app/main/default/objects/mcdm_15__MarketingCloudJourney__x/fields/mcdm_15__DefinitionId__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__DefinitionId__c</fullName>
    <description>Id of the journey&#39;s definition.</description>
    <externalDeveloperName>DefinitionId</externalDeveloperName>
    <label>Definition ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>