force-app/main/default/objects/mcdm_15__MarketingCloudJourney__x/fields/mcdm_15__Description__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Description__c</fullName>
    <description>Description of the Journey.</description>
    <externalDeveloperName>Description</externalDeveloperName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>