force-app/main/default/objects/mcdm_15__MarketingCloudJourney__x/fields/mcdm_15__ExecutionMode__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__ExecutionMode__c</fullName>
    <description>Execution Mode of the journey.</description>
    <externalDeveloperName>ExecutionMode</externalDeveloperName>
    <label>Execution Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>