force-app/main/default/objects/mcdm_15__MarketingCloudJourney__x/fields/mcdm_15__Key__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Key__c</fullName>
    <description>Marketing Cloud key for the journey.</description>
    <externalDeveloperName>Key</externalDeveloperName>
    <label>Key</label>
    <length>64</length>
    <type>Text</type>
</CustomField>