force-app/main/default/objects/mcdm_15__MarketingCloudJourney__x/fields/mcdm_15__LinkedBusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__LinkedBusinessUnit__c</fullName>
    <description>The Linked Business Unit asscoiated with this journey. This field is only used to faciliate queries</description>
    <externalDeveloperName>LinkedBusinessUnit</externalDeveloperName>
    <label>Linked Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>