force-app/main/default/objects/mcdm_15__MarketingCloudJourney__x/fields/mcdm_15__Name__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Name__c</fullName>
    <description>The marketer-provided name for the journey.</description>
    <externalDeveloperName>Name</externalDeveloperName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>