force-app/main/default/objects/mcdm_15__MarketingCloudJourney__x/fields/mcdm_15__Status__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Status__c</fullName>
    <description>Indicates if the journey is published (active) or a draft.</description>
    <externalDeveloperName>Status</externalDeveloperName>
    <label>Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>