force-app/main/default/objects/mcdm_15__MarketingCloudJourney__x/fields/mcdm_15__Version__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Version__c</fullName>
    <description>Version of the journey.</description>
    <externalDeveloperName>Version</externalDeveloperName>
    <label>Version</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>